commit all branch

--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
 
     <script src="app/js/controllers/ecran10Controller.js"></script>
 
-    <link href="app/css/style.css" rel="stylesheet">
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
+    <style type="text/css">
+      [class*="col"] { margin-bottom: 20px; }
+      img { width: 100%; }
+    </style>
+
+    <link href="app/css/style.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-    <div ng-include="'app/views/ecran1.html'"></div>
+    <div ng-include="'app/views/ecran2.html'"></div>
 
     <!--<div ng-include="'app/views/ecran2.html'"></div>-->
 
